css/sass/smallest.scss
/* ... */
@mixin full_padding {
    padding-top: $padding_standard;
    padding-bottom: $padding_standard;
    @include wrap_padding;
}

body {
    position: relative;
    letter-spacing: 0.03rem;
    width: 100%;
}

.wrapper {
    overflow: hidden;
}

p, ul {
    font-size: $font_smallest_p;
    line-height: 175%;
    margin-bottom: $margin_smallest;
}

main {
    padding-top: 5rem;
}

// Home
.home {
    position: relative;
    h1 {
        @include mixin_title;
    }

    h2 {
        font-family: $secondary_font;
    }


    main {
       background-color: $primary_teal;
       background: linear-gradient(45deg, rgba(20,181,181,1) 0%, rgba(0,167,209,1) 100%); 
       color: $primary_white;
       
       .intro {
           padding-left: $padding_smallest;
           padding-right: $padding_smallest;

           .mac, div.grid-p {
                opacity: 0;
           }
           .mac {
                display: block;
                width: 65%;
                margin: 1rem auto 1.5rem;
           }

           div.grid-p {
                animation: onLoadFadeIn 3s forwards, onLoadMoveIn_txt 3s forwards;
                animation-delay: 1750ms;
           }
       }

       .block {
           display: block;
       }
       a.btn {
           color: $primary-white;
           text-decoration: none;
           font-size: 2rem;

           display: inline-block;
           padding: .75rem 2rem;
           border: 2px solid $primary-white;
           border-radius: .5rem;
           margin: 2rem auto 0;
           transition: all .25s ease;
       }
       a.btn {
           &.blue:hover {
                color: $tertiary_dull_blue;
           }

           &.orange:hover {
                color: $primary_orange;
           }

           &.black:Hover {
               color: $primary_black;
           }
           
           &:hover, &:active {
               background-color: $primary-white;    
           }
       }
    }    

    // SVG styling
    .cls-1,.cls-3,.hello{
        stroke-miterlimit:10;
    }
    .cls-2,.hello{
        stroke-linecap:round;
    }
    .cls-2{
        stroke-linejoin:round;
    }
    .cls-3{
        stroke-width:0.25px;
    }
}

.home:not(.ac) main .intro .mac {
    animation: onLoadFadeIn 3s forwards, onLoadMoveIn_mac_small 3s forwards;
}

.home.ac main .intro .mac {
    opacity: 1;
}
svg.mac {
    path, ellipse {
        fill:none;
        stroke: #f2f2f2;
    }
}
svg.mac .hello {
    stroke:#f2f2f2;
    stroke-width:2px;
    stroke-dasharray: 325px;
    stroke-dashoffset: 325px;
    animation: writeHello 1.3s linear .4s forwards;
}
//  END HOME PAGE



.dropcaps {
    margin-top: $margin_standard;
    &::first-letter {
        float: left;
        font-size: 7.01rem;
        font-weight: bold;
        color: $primary_orange;
        margin-top: 1.9rem;
        margin-right: 1rem;
    }
}

q {
    position: relative;
    display: block;
    font-family: $secondary_font;
    font-size: $font_smallest_p*1.2;
    font-weight: bold;
    line-height: 150%;
    text-align: center;
    letter-spacing: 2px;
    color: $primary_orange;
    text-transform: uppercase;
    padding-top: $padding_smallest;
    padding-bottom: $padding_smallest;
    border-top: 3px solid $primary_orange;
    border-bottom: 3px solid $primary_orange;
    margin-top: $margin_smallest;
    margin-bottom: $margin_smallest;
}

//  SHARED ABOUT AND CASE STUDIES
.about article, .case-study .copy, .case-study h1.post-heading, .case-study .meta {
    width: 90%;
    max-width: 76.5rem;
    margin: 2rem auto 5rem;
}

    .case-study h1.post-heading {
        margin-top: 2rem; // Normalises the heading to look like the other pages
    }

.content article {
    h2, h3, p a {
        color: $tertiary_dull_blue;
    }

    h2, h3{
        font-family: $secondary_font;
        font-weight: normal;
        margin-bottom: 1.25rem;
        margin-top: 1rem;
    }

    h2 {
        font-size: $font_small_header;
    }

    h3 {
        font-size: $font_smallest_header;
    }

    figure {
        &.figure--breakout {
            min-width: 100%;
            margin-left: -4.7rem;
            margin-right: -4.7rem;
        }
    }

    p {
        a {
            text-decoration: none;
            letter-spacing: 1px;
            border-bottom: 2px solid $tertiary_dull_blue;
        }
    }

    p, ul.colour-list {
        color: $primary_black;
    }

    .caption {
        font-size: 1.4rem;
        line-height: 150%;
        text-align: center;
        font-style: italic;
        margin-top: 1rem;
    }
}
// END ABOUT CASE STUDY SHARED
.content {
    background-color: $primary_white;
    article {
        h1 {
            font-family: $primary_font;
            font-size: 3.5rem;
            font-weight: bold;
            letter-spacing: 2px;
            text-transform: uppercase;
            color: $tertiary_dull_blue;
            margin-bottom: .65rem;
        }
    }
}
/* ... */

